--- a/spring-webmvc-study/build-copy.gradle
+++ b/spring-webmvc-study/build-copy.gradle
@@ -7,6 +7,10 @@ version '5.0.20.BUILD-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
+repositories {
+    mavenCentral()
+}
+
 // tomcat: 以下配置会在第一次启动时下载插件二进制文件
 buildscript {
     repositories {
@@ -18,29 +22,23 @@ buildscript {
     }
 }
 
-// 配置阿里源
+
 allprojects {
     repositories {
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
 }
 
-
 dependencies {
-    provided("javax.servlet:javax.servlet-api:4.0.1")
     compile(project(":spring-webmvc"))
-
-    // tomcat: 将Tomcat运行时库添加到配置tomcat中: (此处为Tomcat9)
+    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
+    runtime 'javax.servlet:jstl:1.1.2' // Servlet容器必需
     def tomcatVersion = '9.0.1'
     tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
             "org.apache.tomcat.embed:tomcat-embed-logging-juli:9.0.0.M6",
             "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
 }
-
-// tomcat: 一些协议设置（注意，这里必须加上，不然会抛tomcat的异常，仅限tomcat9）
 tomcat {
-    httpPort = 8090
-    contextPath = '/sample-app'
     httpProtocol = 'org.apache.coyote.http11.Http11Nio2Protocol'
     ajpProtocol  = 'org.apache.coyote.ajp.AjpNio2Protocol'
 }
